build: Various fixes & improvements